- In opus.css, make sure "x" button in metadata dialog is not cut off   (line 331-334).

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -328,6 +328,11 @@ ul.searchMenu {
     border-radius: 1%;
 }
 
+/* Make sure "x" button in metadata-dialog is not cut off */
+.modal-content .close i {
+    line-height: 1.1em;
+}
+
 .modal-footer .left-container {
     width: 74%;
 }
